--- a/style.css
+++ b/style.css
@@ -7,3 +7,27 @@ body {
 .container {
     max-width: 300px;
 }
+
+/* hiding photos from start */
+.img1{
+    display: none;
+}
+
+.img2{
+    display: none;
+}
+.img3{
+    display: none;
+}
+
+.img4{
+    display: none;
+}
+.img5{
+    display: none;
+}
+
+.end-title{
+    display:none;
+}
+
